--- a/7786_TrongNghia_THJaVaB3/7786_TrongNghia/src/main/resources/application.properties
+++ b/7786_TrongNghia_THJaVaB3/7786_TrongNghia/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.open-in-view=false
+
+server.error.path=/error
